import java.util.*;

public class FoundationGrammarUnit {
    private String id;
    private String bookId;
    private String title;
    private Integer order;
    private String theoryContent;
    private Date createdAt;
    private Date updatedAt;
    private List<FoundationGrammarExercise> exercises;
    private List<FoundationGrammarProgress> progress;
}
