import java.util.*;

public class FoundationSoundExample {
    private String id;
    private String soundId;
    private String word;
    private String ipa;
    private String audioUrl;
    private Integer order;
}
