import java.util.*;

public class FoundationVocabLesson {
    private String id;
    private String title;
    private String description;
    private Difficulty difficulty;
    private Integer order;
    private Boolean isPublished;
    private Date createdAt;
    private Date updatedAt;
    private List<FoundationVocabWord> vocabularies;
    private List<Grammar> grammars;
}
