import java.util.*;

public class FoundationVocabProgress {
    private String id;
    private String userId;
    private String unitId;
    private Integer wordsLearned;
    private Integer totalWords;
    private Integer exerciseScore;
    private Integer questionScore;
    private Boolean isCompleted;
    private Date completedAt;
    private Date createdAt;
    private Date updatedAt;
}
