public enum PronunciationMastery {
    NEW,
    PRACTICING,
    MASTERED
}
