public enum PronunciationStatus {
    PENDING,
    PROCESSING,
    COMPLETED,
    FAILED
}
