import java.util.*;

public class FoundationGrammarBook {
    private String id;
    private String slug;
    private String name;
    private String author;
    private String level;
    private String imageUrl;
    private String color;
    private Integer unitCount;
    private Date createdAt;
    private Date updatedAt;
    private List<FoundationGrammarUnit> units;
}
