import java.util.*;

public class FoundationGrammarExercise {
    private String id;
    private String unitId;
    private String section;
    private String question;
    private String type;
    private Object options;
    private String answer;
    private Integer order;
    private FoundationGrammarUnit unit;
}
