import java.util.*;

public class FoundationVocabBook {
    private String id;
    private String name;
    private String imageUrl;
    private Integer wordCount;
    private Integer order;
    private Date createdAt;
    private Date updatedAt;
    private List<FoundationVocabUnit> units;
}
