import java.util.*;

public class IeltsAdvancedListeningPart {
    private String id;
    private String title;
    private Integer partNumber;
    private String audioUrl;
    private Object transcript;
    private Object content;
    private List<String> questionTypes;
    private Date createdAt;
    private Date updatedAt;
    private List<IeltsAdvancedListeningSession> sessions;
}
