import java.util.*;

public class IeltsAdvancedReadingSession {
    private String id;
    private String userId;
    private String partId;
    private Object answers;
    private Object scoreData;
    private Integer totalScore;
    private Integer totalQuestions;
    private Date createdAt;
    private IeltsAdvancedReadingPart part;
    private User user;
}
