import java.util.*;

public class IeltsBasicLesson {
    private String id;
    private String skillId;
    private String chapter;
    private String title;
    private Object content;
}
