import java.util.*;

public class IeltsBasicListeningExercise {
    private String id;
    private String skillId;
    private String lessonId;
    private String topic;
    private String instructions;
    private String audioUrl;
}
