import java.util.*;

public class IeltsBasicReadingExercise {
    private String id;
    private String skillId;
    private String lessonId;
    private String topic;
    private String instructions;
    private String passage;
    private Object passageWithLocations;
    private Object content;
    private Integer order;
    private Date createdAt;
    private Date updatedAt;
    private IeltsBasicSkill skill;
    private IeltsBasicLesson lesson;
    private List<IeltsBasicProgress> progress;
}
