@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide methods

enum IeltsIntensiveExamType {
  + FULL_TEST
  + READING
  + LISTENING
  + SPEAKING
  + WRITING
  + PRACTICE
}

enum Difficulty {
  + BEGINNER
  + INTERMEDIATE
  + ADVANCED
}

enum IeltsIntensiveSessionStatus {
  + IN_PROGRESS
  + SUBMITTED
  + GRADING
  + GRADED
  + COMPLETED
  + ABANDONED
  + GRADING_FAILED
}

enum PronunciationStatus {
  + PENDING
  + PROCESSING
  + COMPLETED
  + FAILED
}

enum PronunciationMastery {
  + NEW
  + PRACTICING
  + MASTERED
}

class User {
  - id: String
  - email: String
  - password: String?
  - googleId: String?
  - avatar: String?
  - firstName: String?
  - lastName: String?
  - isActive: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsIntensiveExam {
  - id: String
  - title: String
  - description: String?
  - imageUrl: String?
  - duration: Int
  - isPublished: Boolean
  - questions: Json
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsIntensiveSession {
  - id: String
  - userId: String
  - examId: String
  - answers: Json
  - timeTaken: Int?
  - practicePart: Int?
  - startedAt: DateTime
  - submittedAt: DateTime?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsIntensiveResult {
  - id: String
  - userId: String
  - sessionId: String
  - totalScore: Float
  - readingScore: Int?
  - listeningScore: Int?
  - speakingScore: Float?
  - writingScore: Float?
  - feedback: Json?
  - gradedAt: DateTime
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationVocabLesson {
  - id: String
  - title: String
  - description: String?
  - order: Int
  - isPublished: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationVocabWord {
  - id: String
  - lessonId: String
  - word: String
  - meaning: String
  - ipa: String?
  - audioUrl: String?
  - example: String?
  - partOfSpeech: String?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationPronunciationAttempt {
  - id: String
  - userId: String
  - vocabularyId: String?
  - audioUrl: String
  - transcribedText: String?
  - targetWord: String
  - score: Int?
  - feedback: Json?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationVocabBook {
  - id: String
  - name: String
  - imageUrl: String
  - wordCount: Int
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationVocabUnit {
  - id: String
  - bookId: String
  - title: String
  - order: Int
  - storyTitle: String?
  - storyContent: String?
  - storyImageUrl: String?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationVocabItem {
  - id: String
  - unitId: String
  - word: String
  - meaning: String
  - ipa: String?
  - partOfSpeech: String?
  - example: String?
  - imageUrl: String?
  - audioUrl: String?
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationVocabExercise {
  - id: String
  - unitId: String
  - question: String
  - answer: String
  - options: Json
  - order: Int
}

class FoundationVocabQuestion {
  - id: String
  - unitId: String
  - question: String
  - type: String
  - options: Json?
  - answer: String
  - order: Int
}

class FoundationVocabProgress {
  - id: String
  - userId: String
  - unitId: String
  - wordsLearned: Int
  - totalWords: Int
  - exerciseScore: Int?
  - questionScore: Int?
  - isCompleted: Boolean
  - completedAt: DateTime?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationGrammarBook {
  - id: String
  - slug: String
  - name: String
  - author: String
  - level: String
  - imageUrl: String
  - color: String
  - unitCount: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationGrammarUnit {
  - id: String
  - bookId: String
  - title: String
  - order: Int
  - theoryContent: String?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationGrammarExercise {
  - id: String
  - unitId: String
  - section: String
  - question: String
  - type: String
  - options: Json?
  - answer: String
  - order: Int
}

class FoundationGrammarProgress {
  - id: String
  - userId: String
  - unitId: String
  - theoryCompleted: Boolean
  - exerciseScore: Int?
  - exerciseTotal: Int?
  - completedAt: DateTime?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationPronunciationSound {
  - id: String
  - symbol: String
  - type: String
  - word: String
  - name: String?
  - description: String?
  - tip: String?
  - imageUrl: String?
  - audioUrl: String?
  - videoUrl: String?
  - voiced: Boolean?
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FoundationSoundExample {
  - id: String
  - soundId: String
  - word: String
  - ipa: String?
  - audioUrl: String?
  - order: Int
}

class FoundationPronunciationProgress {
  - id: String
  - userId: String
  - soundId: String
  - practiceCount: Int
  - bestScore: Int?
  - lastPracticedAt: DateTime?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicSkill {
  - id: String
  - name: String
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicLesson {
  - id: String
  - skillId: String
  - chapter: String?
  - title: String
  - content: Json
  - quiz: Json?
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicListeningExercise {
  - id: String
  - skillId: String
  - lessonId: String?
  - topic: String
  - instructions: String?
  - audioUrl: String
  - transcript: Json
  - content: Json
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicReadingExercise {
  - id: String
  - skillId: String
  - lessonId: String?
  - topic: String
  - instructions: String?
  - passage: String
  - passageWithLocations: Json?
  - content: Json
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicProgress {
  - id: String
  - userId: String
  - lessonId: String?
  - listeningExerciseId: String?
  - readingExerciseId: String?
  - writingExerciseId: String?
  - isCompleted: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicWritingExercise {
  - id: String
  - skillId: String
  - lessonId: String?
  - topic: String
  - instructions: String?
  - prompt: String
  - diagramUrl: String?
  - modelAnswer: Json
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsBasicWritingAnswer {
  - id: String
  - userId: String
  - writingExerciseId: String
  - intro: String
  - overview: String
  - body1: String
  - body2: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsAdvancedListeningPart {
  - id: String
  - title: String
  - partNumber: Int
  - audioUrl: String
  - transcript: Json
  - content: Json
  - questionTypes: String[]
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsAdvancedListeningSession {
  - id: String
  - userId: String
  - partId: String
  - answers: Json
  - scoreData: Json
  - totalScore: Int
  - totalQuestions: Int
  - createdAt: DateTime
}

class IeltsAdvancedReadingPart {
  - id: String
  - title: String
  - partNumber: Int
  - passage: String
  - passageWithLocations: Json?
  - content: Json
  - questionTypes: String[]
  - createdAt: DateTime
  - updatedAt: DateTime
}

class IeltsAdvancedReadingSession {
  - id: String
  - userId: String
  - partId: String
  - answers: Json
  - scoreData: Json
  - totalScore: Int
  - totalQuestions: Int
  - createdAt: DateTime
}

class IeltsProfile {
  - id: String
  - userId: String
  - targetBand: Float?
  - dailyCommitmentMins: Int?
  - examDate: DateTime?
  - placementScore: Int?
  - placementListening: Int?
  - placementReading: Int?
  - placementWriting: Int?
  - onboardingCompleted: Boolean
  - currentStreak: Int
  - longestStreak: Int
  - lastActiveDate: DateTime?
  - totalXp: Int
  - level: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

IeltsIntensiveExam "1" -- "1" IeltsIntensiveExamType
IeltsIntensiveExam "1" -- "1" Difficulty
IeltsIntensiveExam "1" -- "0..*" IeltsIntensiveSession
IeltsIntensiveSession "1" -- "1" IeltsIntensiveSessionStatus
IeltsIntensiveSession "1" -- "1" User
IeltsIntensiveSession "1" -- "1" IeltsIntensiveExam
IeltsIntensiveSession "1" -- "1" IeltsIntensiveResult
IeltsIntensiveResult "1" -- "1" User
IeltsIntensiveResult "1" -- "1" IeltsIntensiveSession
FoundationVocabLesson "1" -- "1" Difficulty
FoundationVocabLesson "1" -- "0..*" FoundationVocabWord
FoundationVocabLesson "1" -- "0..*" Grammar
FoundationVocabWord "1" -- "1" FoundationVocabLesson
FoundationVocabWord "1" -- "0..*" FoundationPronunciationAttempt
FoundationPronunciationAttempt "1" -- "1" PronunciationStatus
FoundationPronunciationAttempt "1" -- "1" User
FoundationPronunciationAttempt "1" -- "1" FoundationVocabWord
FoundationVocabBook "1" -- "0..*" FoundationVocabUnit
FoundationVocabUnit "1" -- "1" FoundationVocabBook
FoundationVocabUnit "1" -- "0..*" FoundationVocabItem
FoundationVocabUnit "1" -- "0..*" FoundationVocabExercise
FoundationVocabUnit "1" -- "0..*" FoundationVocabQuestion
FoundationVocabUnit "1" -- "0..*" FoundationVocabProgress
FoundationVocabItem "1" -- "1" FoundationVocabUnit
FoundationVocabExercise "1" -- "1" FoundationVocabUnit
FoundationVocabQuestion "1" -- "1" FoundationVocabUnit
FoundationVocabProgress "1" -- "1" User
FoundationVocabProgress "1" -- "1" FoundationVocabUnit
FoundationGrammarBook "1" -- "0..*" FoundationGrammarUnit
FoundationGrammarUnit "1" -- "1" FoundationGrammarBook
FoundationGrammarUnit "1" -- "0..*" FoundationGrammarExercise
FoundationGrammarUnit "1" -- "0..*" FoundationGrammarProgress
FoundationGrammarExercise "1" -- "1" FoundationGrammarUnit
FoundationGrammarProgress "1" -- "1" User
FoundationGrammarProgress "1" -- "1" FoundationGrammarUnit
FoundationPronunciationSound "1" -- "0..*" FoundationSoundExample
FoundationPronunciationSound "1" -- "0..*" FoundationPronunciationProgress
FoundationSoundExample "1" -- "1" FoundationPronunciationSound
FoundationPronunciationProgress "1" -- "1" PronunciationMastery
FoundationPronunciationProgress "1" -- "1" User
FoundationPronunciationProgress "1" -- "1" FoundationPronunciationSound
IeltsBasicSkill "1" -- "0..*" IeltsBasicLesson
IeltsBasicSkill "1" -- "0..*" IeltsBasicListeningExercise
IeltsBasicSkill "1" -- "0..*" IeltsBasicReadingExercise
IeltsBasicSkill "1" -- "0..*" IeltsBasicWritingExercise
IeltsBasicLesson "1" -- "1" IeltsBasicSkill
IeltsBasicLesson "1" -- "0..*" IeltsBasicListeningExercise
IeltsBasicLesson "1" -- "0..*" IeltsBasicReadingExercise
IeltsBasicLesson "1" -- "0..*" IeltsBasicWritingExercise
IeltsBasicLesson "1" -- "0..*" IeltsBasicProgress
IeltsBasicListeningExercise "1" -- "1" IeltsBasicSkill
IeltsBasicListeningExercise "1" -- "1" IeltsBasicLesson
IeltsBasicListeningExercise "1" -- "0..*" IeltsBasicProgress
IeltsBasicReadingExercise "1" -- "1" IeltsBasicSkill
IeltsBasicReadingExercise "1" -- "1" IeltsBasicLesson
IeltsBasicReadingExercise "1" -- "0..*" IeltsBasicProgress
IeltsBasicProgress "1" -- "1" User
IeltsBasicProgress "1" -- "1" IeltsBasicLesson
IeltsBasicProgress "1" -- "1" IeltsBasicListeningExercise
IeltsBasicProgress "1" -- "1" IeltsBasicReadingExercise
IeltsBasicProgress "1" -- "1" IeltsBasicWritingExercise
IeltsBasicWritingExercise "1" -- "1" IeltsBasicSkill
IeltsBasicWritingExercise "1" -- "1" IeltsBasicLesson
IeltsBasicWritingExercise "1" -- "0..*" IeltsBasicProgress
IeltsBasicWritingExercise "1" -- "0..*" IeltsBasicWritingAnswer
IeltsBasicWritingAnswer "1" -- "1" User
IeltsBasicWritingAnswer "1" -- "1" IeltsBasicWritingExercise
IeltsAdvancedListeningPart "1" -- "0..*" IeltsAdvancedListeningSession
IeltsAdvancedListeningSession "1" -- "1" IeltsAdvancedListeningPart
IeltsAdvancedListeningSession "1" -- "1" User
IeltsAdvancedReadingPart "1" -- "0..*" IeltsAdvancedReadingSession
IeltsAdvancedReadingSession "1" -- "1" IeltsAdvancedReadingPart
IeltsAdvancedReadingSession "1" -- "1" User
IeltsProfile "1" -- "1" User

@enduml
